Removed routes nesting
